[tool.poetry]
name = "am43-bleak"
version = "0.1.0"
description = "Bluetooth library for AM43/Zemismart blinds"
authors = ["Andrey Yantsen <andrey@janzen.su>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
packages = [{include = "am43_bleak", from = "src"}]

[tool.isort]
profile = "black"
force_sort_within_sections = true
known_first_party = [
    "am43_bleak",
]
forced_separate = []
combine_as_imports = true

[tool.black]
target-version = ["py39"]

[tool.poetry.dependencies]
python = "^3.9"
bleak = "^0.19.2"
bleak-retry-connector = "^2.13.0"
home-assistant-bluetooth = "^1.6.0"
construct = "^2.10.67"
construct-typing = "^0.5.5"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
pytest = "^7.0"
pytest-cov = "^3.0"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
