[tool.poetry]
name = "am43-bleak"
version = "0.1.0"
description = "Bluetooth library for AM43/Zemismart blinds"
authors = ["Andrey Yantsen <andrey@janzen.su>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
packages = [{include = "am43_bleak", from = "src"}]

[tool.isort]
profile = "black"
force_sort_within_sections = true
known_first_party = ["am43_bleak", "tests"]
forced_separate = []
combine_as_imports = true

[tool.black]
target-version = ["py310"]

[tool.poetry.dependencies]
python = "^3.10"
bleak = "^0.20.0"
bleak-retry-connector = "^3.0.1"
home-assistant-bluetooth = "^1.9.3"
construct = "^2.10.67"
construct-typing = "^0.5.5"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
pytest = "^7.0"
pytest-cov = "^4.0"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
