[tool.poetry]
name = "am43-bleak"
version = "0.0.1"
description = "Bluetooth library for AM43/Zemismart blinds"
authors = ["Andrey Yantsen <andrey@janzen.su>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
packages = [{include = "am43_bleak", from = "src"}]

[tool.isort]
profile = "black"
force_sort_within_sections = true
known_first_party = ["am43_bleak", "tests"]
forced_separate = []
combine_as_imports = true

[tool.black]
target-version = ["py311"]

[tool.poetry.dependencies]
python = ">=3.11,<3.13" # 3.13+ is not supported by bleak
bleak = "^0.21"
bleak-retry-connector = "^3.1"
home-assistant-bluetooth = { version = "^1.12", optional = true }
construct = "^2.10"
construct-typing = "^0.6"
bluetooth-sensor-state-data = "^1.6"
bluetooth-data-tools = "^1.6"

[tool.poetry.extras]
home-assistant = ["home-assistant-bluetooth"]

[tool.poetry.group.dev.dependencies]
black = "^24.3"
isort = "^5.12"
pytest = "^8.1"
pytest-cov = "^5.0"
pytest-asyncio = "^0.23"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
